--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -33,7 +33,7 @@ header>h1 {
     font-variant: small-caps;
     font-family: var(--font2);
     font-size: 10vw;
-    
+
 }
 
 header>p {
@@ -55,7 +55,11 @@ section {
     padding-left: 30px;
     line-height: 2em;
     font-family: var(--font3);
-    font-size: 3.5vw;
+    font-size: 3.7vw;
+}
+
+section>p {
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -64,14 +68,28 @@ section.normal {
 }
 
 section.imagem {
-    background-color: rgb(36, 36, 36);
+    background-color: #242424;
     color: white;
+    box-shadow: inset 6px 6px 13px 0px #00000079;
+    background: fixed;
+}
+
+section#img01 {
+    background-image: url('pacote-d012/imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02 {
+    background-image: url('pacote-d012/imagens/background002.jpg');
+    background-size: cover;
 }
 
 section.imagem>p {
-    background-color: rgba(0, 0, 0, 0.274);
+    background-color: #00000080;
     display: inline-block;
     padding: 10px;
+    text-shadow: 1px 1px 0px black;
 }
 
 footer {
