--- a/exercicios/ex021/mq02/estilos/retrato.css
+++ b/exercicios/ex021/mq02/estilos/retrato.css
@@ -1,2 +1,7 @@
 @charset "UTF-8";
 /* Aparelhos em pé (portrait) */
+
+body {
+    background-image: url(../images/cev-portrait.jpg);
+    background-position: bottom center;
+}
